--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "author": "Bufo",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "job-checker": "ts-node src/cli.ts"
+  },
   "dependencies": {
+    "commander": "^10.0.1",
     "dotenv": "^16.0.3",
     "nostr-tools": "^1.10.1",
     "puppeteer": "^20.2.0",
